--- a/.github/workflows/sync_readme_to_notion.yml
+++ b/.github/workflows/sync_readme_to_notion.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Sync README to Notion
-        uses: your-username/notion-sync-action@v1
+        uses: https://github.com/Novia-RDI-Seafaring/notion-sync-action
         with:
           notion_token: ${{ secrets.NOTION_TOKEN }}
           notion_page_id: ${{ secrets.NOTION_PAGE_ID }}
