setup node in action

--- a/.github/workflows/sync_readme_to_notion.yml
+++ b/.github/workflows/sync_readme_to_notion.yml
@@ -16,6 +16,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20' # Ensure this matches the version in action.yml
+
+      - name: Install dependencies
+        run: npm install
+        
       - name: Sync README to Notion
         uses: Novia-RDI-Seafaring/notion-sync-action@v1.0.1
         with:
