--- a/.github/workflows/sync_readme_to_notion.yml
+++ b/.github/workflows/sync_readme_to_notion.yml
@@ -21,3 +21,4 @@ jobs:
         with:
           notion_token: ${{ secrets.NOTION_TOKEN }}
           notion_page_id: ${{ secrets.NOTION_PAGE_ID }}
+          repo_description: docker in vsc tutorial
